--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "serverless-openapi",
-  "version": "1.1.2",
-  "description": "Serverless plugin to generate OpenAPI V3 documentation from serverless configuration",
+  "name": "serverless-openapi-security",
+  "version": "1.0.0",
+  "description": "Serverless plugin to generate OpenAPI V3 documentation from serverless configuration. Implements support for endpoint-level security.",
   "main": "index.js",
   "engines": {
     "node": ">=6.0.0",
